# cognos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  FEATURES.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backtest.md  comply.md  document.md  explore.md  ideate.md  model.md  review.md  validate.md
.claude/commands/: cognos-run.md
.claude/hooks/: protect-runs.sh  secret-scan.sh
.claude/hooks/lib/: hook-common.sh
docs/adr/: 0001-reasoning-proposes-engine-disposes.md  0002-llm-authored-transforms-safe-execution.md  0003-two-tier-reproducibility.md  0004-primary-domain-commercial-fair-lending-optional.md  0005-backtesting-is-credit-risk-outcomes-analysis.md  0006-compliance-is-non-gating-readiness-report.md  0007-single-interpretable-champion-no-silent-ensemble.md
evals/: cases.yaml  score.py
examples/end_to_end/: README.md  run_demo.py
projects/: example-credit.yaml  example-regression.yaml
src/cognos/: __init__.py  artifacts.py  cli.py  config.py  context.py  datautil.py  okf.py  orchestrator.py  synth.py
src/cognos/brains/: __init__.py  base.py  llm.py
src/cognos/integrations/: __init__.py  autoforge_loop.py  impact_adapter.py
src/cognos/modeling/: __init__.py  backtest_stats.py  credit_metrics.py  ensemble.py  (+5 more)
tests/: conftest.py
tests/integration/: test_cli.py  test_guided.py  test_pipeline_modes.py  test_stages.py
tests/unit/: test_config_artifacts.py  test_credit_metrics.py  test_glm_families.py  test_integrations.py  test_modeling.py  test_okf.py  test_stat_tests.py  test_transforms.py
(+13 files in other folders)
