[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognos"
version = "0.1.0"
description = "COGNOS — an autonomous multi-agent system for end-to-end statistical/ML model development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wwd1015" }]
keywords = ["automl", "model-development", "multi-agent", "model-risk", "backtesting", "compliance"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
impact = ["impact"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
all = ["anthropic>=0.40", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
cognos = "cognos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cognos = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning", "ignore::UserWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008", "UP042"]  # UP042: (str, Enum) is intentional for JSON/pydantic friendliness
